# COBOLEval

./: .env.example  .gitignore  .pre-commit-config.yaml  Cargo.toml  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
data/jcl/: sample_batch.jcl  sample_cobol_compile.jcl  sample_data_load.jcl  sample_report_gen.jcl  sample_with_errors.jcl
scripts/: __init__.py  evaluate_functional_correctness.py  evaluation.py  generate.py  utils.py
scripts/jcl/: __init__.py  cli.py  parser.py  validator.py
src/: constants.rs  main.rs  parser.rs  transpiler.rs  types.rs
src/eval/: checker.rs  cobol.rs  compiler.rs  metrics.rs  mod.rs  runner.rs  tools.rs  types.rs
tests/: __init__.py  test_data.py  test_evaluation.py  test_jcl.py  test_utils.py
