[package]
name = "cobol_eval"
version = "0.2.0"
edition = "2021"
description = "Python to COBOL transpiler for the COBOLEval benchmark"
license = "MIT"
authors = ["bloop.ai"]
keywords = ["cobol", "transpiler", "llm", "benchmark"]
categories = ["development-tools", "command-line-utilities"]

[dependencies]
anyhow = "1.0.79"
clap = { version = "4.4.0", features = ["derive"] }
env_logger = "0.10.1"
log = "0.4.20"
regex = "1.10.3"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
tree-sitter = "0.20.10"
tree-sitter-python = "0.20.4"

[dev-dependencies]
tempfile = "3.9.0"

[[bin]]
name = "cobol-eval-transpiler"
path = "src/main.rs"

[profile.release]
lto = true
codegen-units = 1
