[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "coboleval"
version = "0.2.0"
description = "LLM Evaluation benchmark for COBOL code generation"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "bloop.ai"}
]
keywords = ["cobol", "llm", "evaluation", "benchmark", "code-generation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "tqdm>=4.66.0",
    "fire>=0.5.0",
    "numpy>=1.26.0",
    "openai>=1.0.0",
    "tenacity>=8.2.0",
    "python-dotenv>=1.0.0",
    "marko>=2.0.0",
    "loguru>=0.7.0",
]

[project.optional-dependencies]
huggingface = [
    "torch>=2.0.0",
    "transformers>=4.35.0",
    "accelerate>=0.24.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.7.0",
    "ruff>=0.1.6",
    "black>=23.11.0",
    "pre-commit>=3.6.0",
]
all = [
    "coboleval[huggingface,dev]",
]

[project.scripts]
coboleval-generate = "scripts.generate:main"
coboleval-evaluate = "scripts.evaluate_functional_correctness:main"
coboleval-jcl = "scripts.jcl.cli:main"

[project.urls]
Homepage = "https://github.com/bloopai/COBOLEval"
Repository = "https://github.com/bloopai/COBOLEval"

[tool.setuptools.packages.find]
where = ["."]
include = ["scripts*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["scripts"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
